# bio-context-enrichment

./: README.md
bio-agent/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
bio-agent/prompts/: reasoner.py  router.py
bio-agent/services/: llm_service.py  tools_service.py
bio-agent/tests/: conftest.py  test_app.py  test_llm_service.py
bio-tools/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  server.py
bio-tools/tests/test_tools/: test_binding_affinity.py  test_molecular_properties.py  test_pubchem_lookup.py  test_toxicity_prediction.py
bio-tools/tests/test_utils/: test_validation.py
bio-tools/tools/: __init__.py  binding_affinity.py  molecular_properties.py  pubchem_lookup.py  toxicity_prediction.py
bio-tools/utils/: validation.py
bio-ui/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
bio-ui/src/: App.vue
